definition/foundation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-production
